--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,32 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'application'
+
+mainClassName = 'de.schwarz.emailparser.ParserMain'
+
+version = '0.1.0'
 
 
 repositories {
 	mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': 1.0
+        attributes (
+        		'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': version,
+                'Main-Class': 'de.schwarz.emailparser.ParserMain'
+                )
     }
+    baseName = 'email-parser'
+    version = version
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:23.0'
-
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
