--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.gradle/
-bin/
-build/
-.settings/
-.idea/
+/.gradle
+/bin
+/build
+/.settings
+/.idea
 email-parser.iml
 email-parser.eml
-out/
+/out
 .classpath
