--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,24 @@ jar {
 }
 
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'de.schwarz.emailparser.ParserMain'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 
 
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    compile 'mysql:mysql-connector-java:5.1.+'
+    // compile 'mysql:mysql-connector-java:5.1.+'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    runtime 'mysql:mysql-connector-java:5.1.6'
 }
 
