--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ jar {
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    compile 'mysql:mysql-connector-java:5.1.+'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
+    runtime "mysql:mysql-connector-java:5.1.21"
 }
 
